# FileScope

./: CMakeLists.txt  CMakePresets.json  FileExplorer_Flowchart.md  README.md  main.c  mermaid.mmd  项目结构流程图.md
app/: app.c
app/controllers/: file_ops.c  view_ctrl.c
app/models/: file_item.c
app/ui/: context_menu.c  file_list.c  main_window.c  sidebar.c  toolbar.c
engine/cache/: thumbnail.c
engine/filesystem/: file_system.c  file_watcher.c  path_resolver.c
engine/render/: icon_cache.c  ui_renderer.c
engine/utils/: sort.c  string_utils.c
include/: app.h  context_menu.h  event.h  file_item.h  file_list.h  file_ops.h  file_system.h  init_sdl.h  main.h  main_window.h  renderer.h  sidebar.h  toolbar.h  window.h
platform/sdl/: events.c  init_sdl.c  renderer.c  window.c
platform/system/: clipboard.c  fs_api.c  theme.c
src/: main.c
system.api/: file_manager.c  file_manager.h  main.c  test_copy.txt
